<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.AuthActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/fl_user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_placeholder" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/oval_user_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ETMarginTop"
        android:gravity="center"
        android:textSize="@dimen/btnTextSize"
        android:textColor="@color/PrimaryTextColor"
        android:text="@string/register"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_register_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/EditTextMarginStartEnd"
        android:padding="@dimen/EditTextPadding"
        android:layout_marginEnd="@dimen/EditTextMarginStartEnd"
        android:background="@drawable/et_background"
        android:hint="@string/user_name"
        android:textSize="@dimen/etTextSize"
        android:inputType="text"
        android:layout_marginTop="@dimen/ETMarginTop"
        android:textColor="@color/PrimaryTextColor"
        android:textColorHint="@color/SecondaryTextColor"/>

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/EditTextMarginStartEnd"
        android:padding="@dimen/EditTextPadding"
        android:layout_marginEnd="@dimen/EditTextMarginStartEnd"
        android:background="@drawable/et_background"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/etTextSize"
        android:layout_marginTop="@dimen/ETMarginTop"
        android:textColor="@color/PrimaryTextColor"
        android:textColorHint="@color/SecondaryTextColor"/>

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/EditTextMarginStartEnd"
        android:padding="@dimen/EditTextPadding"
        android:layout_marginEnd="@dimen/EditTextMarginStartEnd"
        android:background="@drawable/et_background"
        android:hint="@string/password"
        android:textSize="@dimen/etTextSize"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/ETMarginTop"
        android:textColor="@color/PrimaryTextColor"
        android:textColorHint="@color/SecondaryTextColor"/>

    <EditText
        android:id="@+id/et_register_cmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/EditTextMarginStartEnd"
        android:padding="@dimen/EditTextPadding"
        android:layout_marginEnd="@dimen/EditTextMarginStartEnd"
        android:background="@drawable/et_background"
        android:layout_marginTop="@dimen/ETMarginTop"
        android:inputType="textPassword"
        android:textSize="@dimen/etTextSize"
        android:hint="@string/confirm_password"
        android:textColor="@color/PrimaryTextColor"
        android:textColorHint="@color/SecondaryTextColor"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/EditTextMarginStartEnd"
        android:padding="@dimen/EditTextPadding"
        android:layout_marginTop="@dimen/btnMarginTop"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/btnTextSize"
        android:layout_marginEnd="@dimen/EditTextMarginStartEnd"
        android:background="@drawable/btn_background"/>

    <TextView
        android:id="@+id/tv_haveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ETMarginTop"
        android:gravity="center"
        android:textSize="@dimen/etTextSize"
        android:textColor="@color/PrimaryTextColor"
        android:text="@string/already_have_account"/>

</LinearLayout>