<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.NewMessagesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_messages_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-100dp"
            android:paddingEnd="0dp"
            android:text="@string/select_user"
            android:textColor="@color/black"
            android:textSize="@dimen/btnTextSize"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/et_search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rv_my_users"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_new_messages_activity"
        android:hint="@string/search"
        android:textSize="@dimen/etTextSize"
        android:textColor="@color/PrimaryTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        android:gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/tv_background"
        android:padding="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_new_messages_activity" />

    <TextView
        android:id="@+id/tv_no_users_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_users_to_show"
        android:textAlignment="center"
        android:textColor="@color/PrimaryTextColor"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>