<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chat_activity"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/app_register_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/tv_title_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_user_name"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textSize="@dimen/etTextSize"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/ic_user_state"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_user_state"/>
            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_user_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                tools:visibility="visible"/>


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_messages_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rv_chat_messages_marginTop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_message_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_chat_activity" />

    <TextView
        android:id="@+id/tv_no_messages_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_message_found"
        android:textAlignment="center"
        android:textColor="@color/SecondaryTextColor"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toTopOf="@id/ll_message_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_chat_activity" />


    <LinearLayout
        android:id="@+id/ll_message_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/ll_message_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:background="@drawable/messages_background"
            android:hint="@string/message"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/SecondaryTextColor"
            android:textColor="@color/black"
            android:textSize="@dimen/etTextSize" />

        <Button
            android:id="@+id/btn_send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/etTextSize"
            android:text="@string/button_send_messages"
            android:padding="15dp"
            android:textStyle="bold"
            android:background="@drawable/tv_background"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>